# deer-flow

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  apikeys  config.example.yaml  config.yaml  openagents.code-workspace  pyrightconfig.json
admin-console/: README.md  package-lock.json  package.json  tailwind.config.js
backend/: .env.example  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  langgraph.json  pyproject.toml
deepagents/: .release-please-manifest.json  README.md  release-please-config.json
deploy/: .env.example  README.md
docker/: .env.example  README.md  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose-support-demo.yaml  docker-compose.dev.yaml  docker-compose.yaml
docs/: ADMIN_OBSERVABILITY_ARCHITECTURE.md  CODE_CHANGE_SUMMARY_BY_FILE.md  KNOWLEDGE_BASE_ARCHITECTURE.md  LANGGRAPH_INMEM_RUNTIME_EXPLAINED.md  LANGGRAPH_RUNTIME_ARCHITECTURE.md  README.md  SKILL_NAME_CONFLICT_FIX.md  runtime-architecture.md
frontend/: CLAUDE.md  README.md  package.json
frontend/demo/mcp-file-service/: Dockerfile  Dockerfile.local-base  pyproject.toml  requirements.txt  run_mcp.py
frontend/demo/mcp-file-service/app/: __init__.py  documents.py  main.py  service.py
frontend/demo/mcp-file-service/tests/: test_main.py  test_service.py
gateway-go/: .env.example  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  gateway.yaml  go.mod  go.sum
memory/: README.md
migrations/: 001_init.up.sql  002_seed_data.up.sql  003_agent_status_versions.up.sql  003_drop_llm_provider_keys.up.sql  (+20 more)
(+2488 files in other folders)
