[project]
name = "openagents-demo-mcp-file-service"
version = "0.1.0"
description = "Local uv-managed environment for the 8084 MCP demo service"
# Keep the local environment on CPython 3.12 so the host-built wheels match
# the Python ABI used by the demo container image.
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.116.1",
  "markitdown[all,xlsx]==0.1.5",
  "mcp==1.26.0",
  "openpyxl==3.1.5",
  "pillow==12.0.0",
  "pymupdf==1.26.5",
  "pypdf==6.10.2",
  "python-docx==1.2.0",
  "python-pptx==1.0.2",
  "python-multipart==0.0.20",
  "uvicorn==0.35.0",
  "xlrd==2.0.2",
]

[tool.uv]
package = false
